...
                    <menu key="mainMenu" title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
                        <items>
                            <menuItem title="Version Dashboard" id="1Xt-HY-uBw">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="Version Dashboard" systemMenu="apple" id="uQy-DD-JDr">
...
                        <toolbar key="toolbar" implicitIdentifier="A6443199-AC4D-4202-9444-A3EDAE6F940F" autosavesConfiguration="NO" showsBaselineSeparator="NO" displayMode="iconAndLabel" sizeMode="regular" id="H4y-30-MH0">
                            <allowedToolbarItems>
                                <toolbarItem implicitItemIdentifier="7D9AF1CE-1242-4C09-810A-37D5A199BD6E" label="Detailed View" paletteLabel="Detailed View" toolTip="Show detailed informations" tag="-1" image="Detailed view" id="E4i-Mv-nM7" userLabel="DetailedViewButton">
                                    <size key="minSize" width="22" height="22"/>
                                    <size key="maxSize" width="22" height="22"/>
...
                                    <constraint firstAttribute="width" constant="26" id="9hN-Xr-pBP"/>
                                </constraints>
                                <accessibility description="RemoveInstanceButton" identifier="RemoveInstanceButton"/>
                                <connections>
                                    <action selector="removeInstance:" target="XfG-lQ-9wD" id="tZ5-T3-QVI"/>
...
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <accessibility description="AddInstanceButton" identifier="AddInstanceButton"/>
                                <connections>
                                    <segue destination="kEa-r5-7tV" kind="sheet" id="ivn-da-Jl1"/>
...
                                                </tableColumn>
                                            </tableColumns>
                                            <accessibility description="InstanceTableView" identifier="InstanceTableView"/>
                                            <connections>
                                                <outlet property="dataSource" destination="XfG-lQ-9wD" id="vN1-6n-n9T"/>
...
                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                                <accessibility description="SystemLabel" identifier="SystemLabel"/>
                            </textField>
                            <textField autoresizesSubviews="NO" focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" allowsCharacterPickerTouchBarItem="YES" preferredMaxLayoutWidth="152" translatesAutoresizingMaskIntoConstraints="NO" id="Wpt-K6-smb">
...
                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                                <accessibility description="HostLabel" identifier="HostLabel"/>
                            </textField>
                            <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gyu-X2-ggO">
...
                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                                <accessibility description="StatusLabel" identifier="StatusLabel"/>
                            </textField>
                            <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Nve-po-yOl">
...
                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                                <accessibility description="LastCheckLabel" identifier="LastCheckLabel"/>
                            </textField>
                            <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="D4G-6k-UnL">
...
                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                                <accessibility description="CurrentVersionLabel" identifier="CurrentVersionLabel"/>
                            </textField>
                            <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jIC-AQ-uPD">
...
                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                                <accessibility description="LatestVersionLabel" identifier="LatestVersionLabel"/>
                            </textField>
                            <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4GS-Yf-Kuw">
...
                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                                <accessibility description="PhpVersionLabel" identifier="PhpVersionLabel"/>
                            </textField>
                            <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="j8W-qX-9iN">
...
                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                                <accessibility description="WebserverLabel" identifier="WebserverLabel"/>
                            </textField>
                            <textField hidden="YES" focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" verticalCompressionResistancePriority="751" allowsCharacterPickerTouchBarItem="YES" preferredMaxLayoutWidth="226" translatesAutoresizingMaskIntoConstraints="NO" id="9KI-Iw-ZmR">
...
                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                                <accessibility description="DownloadURL" identifier="DownloadURL"/>
                            </textField>
                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qLB-qe-dzI">
...
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <accessibility description="CopyDownloadURL"/>
                                <connections>
                                    <action selector="copyDownloadUrlToClipboard:" target="XfG-lQ-9wD" id="d5L-gU-UbY"/>
...
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
