/* 
  English strings
  Version Dashboard

  Created by Christian Schneider on 05.03.16.
  Copyright © 2016 NonameCompany. All rights reserved.
*/

"errorfetchingVersions" = "Error checking version.";
"edit" = "Edit";
"errorInternetConnection" = "Check internet connection.";
"retry" = "Retry";
"ok" = "OK";
"updateavailable" = "Update available";
"instanceDuplicate" = "Instance already used. Choose another one.";
"protocolMissing" = "No protocol specified.";
"newerVersion" = "Newer version available";
"pleaseUpdate" = "Please update your %@ instance";
"noSelectionMade" = "No instance selected.";
"pleaseCheck" = "Please check instance %@";
"outdated" = "Outdated";
"uptodate" = "Up to date";
"clipboardCopyingWorked" = "URL copied";
"clipboardCopyingFailed" = "URL not copied";
"searchInstances" = "Search instances";
"instances" = "Instances";
"copyUrl" = "Copy download URL";
