...
                                            <modifierMask key="keyEquivalentModifierMask"/>
                                            <connections>
                                                <action selector="orderFrontStandardAboutPanel:" target="Ady-hI-5gd" id="Exp-CZ-Vem"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem isSeparatorItem="YES" id="VOq-y0-SEH"/>
                                        <menuItem title="Preferences…" keyEquivalent="," id="BOF-NM-1cW">
                                            <connections>
                                                <segue destination="lKe-qP-1I3" kind="modal" identifier="PreferencesSegue" id="JL1-qp-yfJ"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem isSeparatorItem="YES" id="rg7-rZ-LN4"/>
                                        <menuItem title="Force update" keyEquivalent="R" id="M4m-DV-3ke">
...
                        </items>
                    </menu>
                    <connections>
                        <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
                    </connections>
                </application>
                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="VersionDashboard" customModuleProvider="target"/>
                <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-54" y="-440"/>
        </scene>
        <!--Window Controller-->
        <scene sceneID="R2V-B0-nI4">
...
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                    <string key="keyEquivalent" base64-UTF8="YES">
DQ
</string>
                                </buttonCell>
                                <accessibility description="PreferencesSaveButton" identifier="PreferencesSaveButton"/>
                                <connections>
                                    <action selector="savePreferences:" target="Sma-kB-1iu" id="3wt-Ox-zaD"/>
                                </connections>
                            </button>
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="fEc-Uc-b3c">
                                <rect key="frame" x="14" y="13" width="111" height="32"/>
...
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                    <string key="keyEquivalent" base64-UTF8="YES">
Gw
</string>
                                </buttonCell>
                                <accessibility description="PreferencesCancelButton" identifier="PreferencesCancelButton"/>
                                <connections>
                                    <action selector="cancelAction:" target="Sma-kB-1iu" id="pm1-JI-ijA"/>
                                </connections>
                            </button>
                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kuN-Yx-1F8">
                                <rect key="frame" x="59" y="66" width="101" height="17"/>
...
                            <button translatesAutoresizingMaskIntoConstraints="NO" id="3KZ-WJ-fDM">
                                <rect key="frame" x="192" y="97" width="22" height="38"/>
                                <buttonCell key="cell" type="check" bezelStyle="regularSquare" imagePosition="left" alignment="left" state="on" inset="2" id="Isb-b9-7Ce">
                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <accessibility description="AutomaticRefreshActivated" identifier="AutomaticRefreshActivated"/>
                            </button>
                            <comboBox verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5Tg-IT-24g">
                                <rect key="frame" x="194" y="59" width="99" height="26"/>
                                <comboBoxCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" completes="NO" numberOfVisibleItems="5" id="KOl-80-PeY">
                                    <font key="font" metaFont="system"/>
                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                </comboBoxCell>
                                <accessibility description="AutomaticRefreshInterval" identifier="AutomaticRefreshInterval"/>
                            </comboBox>
                        </subviews>
                        <constraints>
                            <constraint firstItem="Y9Z-db-y2I" firstAttribute="centerY" secondItem="3KZ-WJ-fDM" secondAttribute="centerY" id="7PP-aU-3wC"/>
                            <constraint firstAttribute="trailing" secondItem="5Tg-IT-24g" secondAttribute="trailing" constant="60" id="8Qs-dm-uiV"/>
                            <constraint firstItem="fEc-Uc-b3c" firstAttribute="baseline" secondItem="FKF-QT-342" secondAttribute="baseline" id="9R3-I0-tkd"/>
...
